# arada-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.worker  MAGONEAI_BUSINESS_FAQ.md  Makefile  README.md  WORKFLOW_UX_RESEARCH.md  docker-compose.dev.yml  index.html  pyproject.toml  tailwind.config.js  vercel.json
.github/workflows/: docker-build.yml  test.yml
alembic/: env.py
alembic/versions/: 3fc5a419aba0_add_skills_tables.py  a1b2c3d4e5f6_add_document_metadata.py  b2c3d4e5f6g7_add_workflow_approvals.py  c3d4e5f6g7h8_add_workflow_schedules.py  d4e5f6g7h8i9_add_teams_integration.py  e5f6g7h8i9j0_add_execution_metadata.py  f6g7h8i9j0k1_add_agent_execution_overview_fields.py  g7h8i9j0k1l2_add_agent_conversations.py
arada-ai-fe/: index.html  package-lock.json  package.json
deploy/: .env.example  README.md  docker-compose.local.yml  docker-compose.yml  init-db.sql  install.sh  validate-env.sh
deploy/temporal-config/: development.yaml
docker/: docker-compose.monitoring.yml  docker-compose.traefik.yml  docker-compose.yml  init-db.sql
docker/temporal-config/: development.yaml
docs/: AGENT_OVERVIEW_IMPLEMENTATION.md  API_REFERENCE.md  CHATBOT_KNOWLEDGE_BASE.md  CODE_REVIEW_ISSUES.md  MULTI_TENANT_PLAN.md  ORCHESTRATOR_TEST_SCENARIOS.md  PERSONA_PLATFORM_SPEC.md  PLATFORM_DOCUMENTATION.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  UI_PLANNING.md  UX_AGENT_OVERVIEW_TAB.md  WORKFLOW_DESIGN.md  WORKFLOW_SYSTEM_DESIGN.md  ai-agent-builder-spec.md  api-key-management-plan.md  arada-poc-architecture.md  arada_poc_implementation_plan.md  arada_poc_solution_architecture.md  arada_poc_ui_integration.md  auth-system-design.md  deployment-plan-external-access.md  monitoring-service-plan.md  multi-tenant-workflow-deployment.md  sharing-collaboration-design.md  ui-design-agent-improvements.md  ui-design-conversation-history.md  ux-research-agent-improvements.md
mcp_servers/: base.py
mcp_servers/arada-sql/: Dockerfile  README.md  agent_config.json  import_data.py  requirements.txt  schema.sql  server.py
mcp_servers/csv-sql/: Dockerfile  requirements.txt  server.py
mcp_servers/filesystem/: Dockerfile  requirements.txt  server.py
mcp_servers/google-calendar/: Dockerfile  requirements.txt  server.py
mcp_servers/google-gmail/: Dockerfile  requirements.txt  server.py
mcp_servers/outlook-calendar/: Dockerfile  requirements.txt  server.py
mcp_servers/outlook-email/: Dockerfile  requirements.txt  server.py
mcp_servers/web-search/: Dockerfile  requirements.txt  server.py
scripts/: create_daily_digest_workflow.py  create_mcp.py  init_superadmin.py  load_arada_agents.py  load_procure_ai_agents.py  register_arada_agents.py  seed_nda_email_workflow.py  seed_nda_skill_and_agent.py  test_daily_digest.py  test_orchestrator.py  test_workflow_definition.py  upload_nda_template.py
src/: App.tsx  __init__.py  index.css
src/activities/: __init__.py  action_validator_activity.py  agent_tool_activity.py  analytics_activity.py  hallucination_checker_activity.py  input_sanitizer_activity.py  knowledge_activity.py  llm_activity.py  loop_detector_activity.py  safety_activity.py  scheduled_workflow_activity.py  simple_agent_activity.py  tool_activity.py
src/agents/: AGENTS.md  __init__.py  base.py  component_loader.py  confidence.py  factory.py
src/api/: app.py  dependencies.py  errors.py  middleware.py
src/auth/: __init__.py  dependencies.py  jwt_handler.py  password.py  schemas.py  service.py
src/channels/: __init__.py
src/config/: __init__.py  arada_poc_agents.py  logging.py  settings.py
src/data/: edaData.ts  mockData.ts
src/knowledge/: __init__.py  chunker.py  document_processor.py  embeddings.py  knowledge_base.py  reranker.py
src/llm/: __init__.py  client.py
src/mcp/: __init__.py  adapter.py  catalog.py  client.py  manager.py  models.py  repository.py
src/models/: __init__.py  agent_config.py  enums.py  knowledge_config.py  llm_config.py  orchestrator_config.py  persona.py  responses.py  routing_rules.py  safety_config.py  skill_config.py  tool_config.py  workflow_definition.py
src/monitoring/: __init__.py  metrics.py  middleware.py
src/orchestration/: __init__.py  aggregators.py
src/pages/: Decomposition.tsx  DeepDive.tsx  index.ts
src/secrets/: __init__.py  base.py  factory.py  local.py  manager.py  vault.py  vault_manager.py
src/services/: real_estate_data_service.py
src/skills/: __init__.py  file_service.py  models.py  repository.py  selector.py
src/storage/: __init__.py  agent_repository.py  approval_repository.py  conversation_repository.py  database.py  knowledge_repository.py  models.py  object_storage.py  redis_client.py  schedule_repository.py  upload_manager.py  workflow_repository.py
src/streaming/: __init__.py  events.py  executor.py
src/tools/: __init__.py  agent_tool.py  base.py  registry.py
src/types/: index.ts
src/utils/: __init__.py  cron_parser.py  hallucination_detector.py  resilience.py
src/workflows/: __init__.py  agent_workflow.py  constants.py  executor.py  generator.py  schedule_service.py  types.py  utils.py
tests/: conftest.py
web/: .dockerignore  CREATE_AGENT_UX_REDESIGN.md  Dockerfile  PROGRESS.md  WORKFLOW_BUILDER_UX_RESEARCH.md  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
workers/: agent_worker.py
(+335 files in other folders)
