[project]
name = "magure-ai-platform"
version = "0.1.0"
description = "Dynamic Agent Workflow Platform with Temporal"
requires-python = ">=3.11"
dependencies = [
    # Temporal
    "temporalio>=1.7.0",

    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.0",  # Server-Sent Events for streaming

    # Data validation
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",

    # LLM Providers
    "openai>=1.55.0",
    "anthropic>=0.39.0",

    # Database
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "greenlet>=3.0.0",

    # Vector DB
    "qdrant-client>=1.12.0",

    # Caching
    "redis>=5.2.0",

    # Logging
    "structlog>=24.4.0",

    # Utils
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",

    # Secrets Management
    "cryptography>=43.0.0",
    "hvac>=2.3.0",  # HashiCorp Vault client

    # Authentication
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",

    # OAuth
    "google-auth-oauthlib>=1.2.0",

    # MCP (Model Context Protocol)
    "mcp>=1.0.0",

    # Rate Limiting
    "slowapi>=0.1.9",

    # Async File I/O
    "aiofiles>=24.1.0",

    # Circuit Breaker
    "circuitbreaker>=2.0.0",

    # OAuth
    "google-auth-oauthlib>=1.2.0",

    # Object Storage (MinIO - S3-compatible)
    "miniopy-async>=1.23.0",

    # Document Processing
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "reportlab>=4.2.0",          # PDF generation
    "pymupdf>=1.24.0",           # Enhanced PDF processing with tables/images
    "pymupdf4llm>=0.0.17",       # PDF to Markdown for LLM/RAG
    "python-pptx>=1.0.0",        # PowerPoint processing
    "openpyxl>=3.1.0",           # Excel processing
    "pandas>=2.2.0",             # DataFrame operations for Excel/CSV
    "tabulate>=0.9.0",           # Required for pandas to_markdown()
    "pytesseract>=0.3.13",       # OCR for scanned documents
    "Pillow>=10.4.0",            # Image processing

    # Monitoring
    "prometheus-client>=0.19.0",
    "python-logging-loki>=0.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",  # Parallel test execution
    "aiosqlite>=0.20.0",    # SQLite async for testing
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

# Optional ML dependencies for enhanced search
ml = [
    "sentence-transformers>=3.3.0",  # Cross-encoder re-ranking
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/__init__.py",
    "src/*/migrations/*",
    "src/config/logging.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 35
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
